2021-deployment/dsei-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsei-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dsei-app
  template:
    metadata:
      labels:
        app: dsei-app
    spec:
      containers:
      - name: dsei-app-latest
        image: quay.io/defencedigital/dsei-app
        ports:
        - containerPort: 5000
