2021-deployment/dsei-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsei-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: dsei-app
