2021-deployment/dsei-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dsei-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
  - hosts:
    - dsei-app.digital.mod.uk
    secretName: dsei-app-tls
  rules:
  - host: dsei-app.digital.mod.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dsei-app
            port:
              number: 80
